# 07_morsecd_starter

./: README.md
.github/workflows/: build.yml
config/: gatorgrade.yml
morsecd/: pyproject.toml
morsecd/morsecd/: decode.py  encode.py  main.py
writing/: reflection.md
