[tool.poetry]
name = "morsecd"
version = "0.1.0"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.scripts]
morsecd = "morsecd.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
rich = "^12.6.0"
typer = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
